# SupportSentinelEnv

./: .gitignore  Dockerfile  LICENSE  README.md  README.md.huggingface  README_PRODUCTION.md  app.py  debug_queue.py  docker-compose.yml  fix_all.py  fix_graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_app.py  start_server.ps1  test_env.py  test_inference_clamping.py  test_optimized.py  test_upgrades.py
customer-support-env/: README.md  __init__.py  app.py  automated_walkthrough.py  debug_queue.py  environment.py  graders.py  inference.py  interactive_cli.py  llm_agent.py  models.py  openenv.yaml  persistence.py  requirements.txt  tasks.py  verify_scores.py
server/: __init__.py  app.py
