[project]
name = "customer-support-env"
version = "1.0.0"
description = "SupportSentinel OpenEnv Environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "httpx==0.27.0",
    "pydantic==2.8.2",
    "openai>=2.7.2",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "starlette==0.38.6",
    "watchfiles==1.1.1",
    "websockets==16.0"
]

[project.scripts]
server = "customer-support-env.app:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"
